[package]
name = "rerun-loader-collada"
version = "0.1.2"
edition = "2021"
description = "Rerun external mesh loader for collada files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gepetto/rerun-loader-collada"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
mesh-loader = "0.1.13"
rerun = "0.24.0"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gepetto/rerun-loader-collada/compare/{{tag_name}}...HEAD", exactly=1},
  {file="default.nix", search="version = \".*\";", replace="version = \"{{version}}\";"},
]
